# restful_rust

./: .gitignore  TODO.md  docker-compose.yaml
backend/: .env  Cargo.toml  app.Dockerfile
backend/migrations/2023-02-05-042828_create_posts/: down.sql  up.sql
backend/migrations/2023-02-05-064142_create_auth/: down.sql  up.sql
backend/src/: auth.rs  common.rs  main.rs  schema.rs  templates.rs
backend/src/auth/: mod.rs  models.rs  persistence.rs  users.rs  views.rs
backend/src/auth/groups/: models.rs  persist.rs  views.rs
backend/src/auth/perms/: models.rs  persist.rs  views.rs
backend/src/auth/users/: models.rs  persist.rs  views.rs
backend/src/blog/: mod.rs  models.rs  persistence.rs  views.rs
backend/src/common/: models.rs  pagination.rs
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.vue
script/: build
serving/: nginx.Dockerfile  nginx.conf.template
