[package]
name = "backend_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
env_logger = "0.10.0"
lazy_static = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tera = "1.17.1"
diesel = { version = "2.0", features = ["postgres", "uuid"] }
dotenvy = "0.15"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
